kube/gcp/task_processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-processor
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: task-processor
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: task-processor
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: task-processor
    spec:
      containers:
      - name: task-processor
        image: luminainc/task-processor:fe3b138
        imagePullPolicy: Always
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
