kube/gcp/chunkmydocs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chunkmydocs
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: chunkmydocs
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: chunkmydocs
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: chunkmydocs
    spec:
      containers:
      - name: chunkmydocs
        image: luminainc/chunkmydocs:51ae2b4e
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
---
apiVersion: v1
kind: Service
metadata:
  name: chunkmydocs-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: chunkmydocs
spec:
  selector:
    app.kubernetes.io/name: chunkmydocs
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chunkmydocs-ingress
  namespace: chunkmydocs
  labels:
    app: chunkmydocs
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chunkmydocs-service
            port:
              number: 8000
