kube/gcp/pdf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: pdf
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pdf
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: pdf
    spec:
      containers:
      - name: pdf
        image: luminainc/pdf:6bcb838
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: pdf-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: pdf
spec:
  selector:
    app.kubernetes.io/name: pdf
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-ingress
  namespace: chunkmydocs
  labels:
    app: pdf
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pdf-service
            port:
              number: 8000
