kube/gcp/pdla-fast.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdla-fast
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: pdla-fast
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pdla-fast
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: pdla-fast
    spec:
      containers:
      - name: pdla-fast
        image: luminainc/pdla:7bd05a1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-k", "uvicorn.workers.UvicornWorker", "--chdir", "./src", "app:app", "--bind", "0.0.0.0:8000", "--timeout", "10000"]
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
---
apiVersion: v1
kind: Service
metadata:
  name: pdla-fast-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: pdla-fast
spec:
  selector:
    app.kubernetes.io/name: pdla-fast
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdla-fast-ingress
  namespace: chunkmydocs
  labels:
    app: pdla-fast
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pdla-fast-service
            port:
              number: 8000
