kube/gcp/pdla.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdla
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: pdla
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pdla
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: pdla
    spec:
      containers:
      - name: pdla
        image: luminainc/pdla:7bd05a1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-k", "uvicorn.workers.UvicornWorker", "--chdir", "./src", "app:app", "--bind", "0.0.0.0:8000", "--timeout", "10000"]
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
        resources:
          limits:
            nvidia.com/gpu: 1
          requests:
            nvidia.com/gpu: 1
---
apiVersion: v1
kind: Service
metadata:
  name: pdla-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: pdla
spec:
  selector:
    app.kubernetes.io/name: pdla
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdla-ingress
  namespace: chunkmydocs
  labels:
    app: pdla
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pdla-service
            port:
              number: 8000
