kube/gcp/rrq.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rrq
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: rrq
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rrq
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: rrq
    spec:
      containers:
      - name: rrq
        image: luminainc/rrq:dd468f6
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
---
apiVersion: v1
kind: Service
metadata:
  name: rrq-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: rrq
spec:
  selector:
    app.kubernetes.io/name: rrq
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rrq-ingress
  namespace: chunkmydocs
  labels:
    app: rrq
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rrq-service
            port:
              number: 8000
