kube/gcp/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: web
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: web
    spec:
      containers:
      - name: web
        image: luminainc/web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: web
spec:
  selector:
    app.kubernetes.io/name: web
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: chunkmydocs
  labels:
    app: web
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 8000
